--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "green_gen",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.1.0",
+    "node": "10.4.0"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "google-map-react": "^1.0.6",
